Fix: Logo on small screen in overlayHeader should only show fast flag (#1154)
* fix: overlayHeader on SM only showing fast flag instead of full logo

* fix: refactored flowcomponent to use logo for small screens

* fix: updated flownavigation logo usage and lint error

* fix: ternary statement in flow component for logo refactoring

--- a/packages/components/src/flowNavigation/FlowNavigation.less
+++ b/packages/components/src/flowNavigation/FlowNavigation.less
@@ -70,26 +70,4 @@
   &--hidden {
     visibility: hidden;
   }
-
-  &--flag {
-    width: var(--size-24);
-    height: var(--size-32);
-    background-repeat: no-repeat;
-    background-position: 50% 50%;
-    background-image: url("https://wise.com/public-resources/assets/logos/wise/brand_flag.svg");
-    transition: transform 0.3s ease-in-out, opacity 0.3s ease-in-out;
-
-    &__hidden {
-      position: absolute;
-      opacity: 0;
-      transform: rotate(90deg);
-      margin-top: -24px;
-      z-index: -1;
-    }
-
-    &__display {
-      opacity: 1;
-      transform: rotate(0deg);
-    }
-  }
 }
